--- a/client/scss/App.css
+++ b/client/scss/App.css
@@ -120,4 +120,24 @@ body #App-wrapper .App {
       overflow: auto;
       order: 2; }
 
+/* line 156, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+div.accounts-dialog.accounts-centered-dialog {
+  padding: 2em;
+  background: grey;
+  color: white; }
+  /* line 164, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  div.accounts-dialog.accounts-centered-dialog div.reset-password-new-password-wrapper input#reset-password-new-password {
+    border-bottom: 1px solid #ffc4c4; }
+  /* line 168, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  div.accounts-dialog.accounts-centered-dialog div.login-button.login-button-form-submit {
+    padding: 1em;
+    background: #393939; }
+  /* line 172, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/App.scss */
+  div.accounts-dialog.accounts-centered-dialog a.accounts-close {
+    position: absolute;
+    top: 0em;
+    right: 0em;
+    padding: 0.6em 1em;
+    cursor: pointer; }
+
 /*# sourceMappingURL=App.css.map */
