--- a/client/scss/App.scss
+++ b/client/scss/App.scss
@@ -147,3 +147,34 @@ body {
     }
   }
 }
+
+
+
+div.hide-background{
+  
+}
+div.accounts-dialog.accounts-centered-dialog{
+  padding: 2em;
+  background: grey;
+  color: white;
+  
+  label#reset-password-new-password-label{
+  }
+  div.reset-password-new-password-wrapper{
+    input#reset-password-new-password{
+      border-bottom: 1px solid #ffc4c4;
+    }
+  }
+  div.login-button.login-button-form-submit{
+    padding: 1em;
+    background: #393939;
+  }
+  a.accounts-close{
+    position: absolute;
+    top:0em;
+    right: 0em;
+    padding: 0.6em 1em;
+    cursor: pointer;
+    
+  }
+}
