--- a/client/scss/reset/reset.css
+++ b/client/scss/reset/reset.css
@@ -3,33 +3,36 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none; }
 
-/* line 11, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+/* line 14, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 a {
   color: inherit;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent; }
 
-/* line 17, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+/* line 20, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 li {
   list-style-type: none; }
 
-/* line 21, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+/* line 24, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 button {
   border: none;
   outline: 0;
   background-color: inherit; }
 
-/* line 27, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+/* line 30, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 input {
   background: transparent;
   border: none; }
-  /* line 30, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+  /* line 33, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
   input:focus {
     outline: 0; }
 
-/* line 35, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
+/* line 38, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/reset/reset.scss */
 button, input[type="checkbox"] {
   cursor: pointer; }
 
