--- a/client/scss/account/Account.scss
+++ b/client/scss/account/Account.scss
@@ -1,7 +1,46 @@
 @import '../theme/colors.scss';
 
+
+
+// ResetForgotPassword & PageAccount
+.account-box{
+  position: relative;
+  width:      100%;
+  max-width:  20em;
+  //min-width: 20em;
+  padding: 1.3em 2em 2em 2em;
+  margin: 1em 1em;
+  background: $color_blue_medium_transparent;
+
+  input{
+    // disable yellow input background when autocompletion
+    &:-webkit-autofill {
+        -webkit-box-shadow: 0 0 0px 1000px $color_blue_dark inset;
+        -webkit-text-fill-color: $color_grey_light !important;
+    }
+  }
+
+  .button-mui{}
+  .btn-cancel{
+    *{
+      font-size:10px !important; // overide mui default/custom js styles
+    }
+  }
+  .btn-action{
+    *{
+      font-size:10px !important; // overide mui default/custom js styles
+    }
+  }
+
+}
+
+#ResetForgotPassword{
+  margin: 3em auto 0 auto;
+}
+
 #Account{
-  margin-top: em;
+  margin-top: 1em;
+  
   section{
     display:   flex;
     margin:    2em auto;
@@ -9,46 +48,163 @@
     -webkit-flex-wrap: wrap; 
     flex-wrap:         wrap; 
     
-    
-    #Login, #Profile{
-      position: relative;
-      width:      100%;
-      max-width:  20em;
-      //min-width: 20em;
-      padding: 1.3em 2em 2em 2em;
-      margin: 1em 1em;
-      background: $color_blue_medium_transparent;
+    #AccountLogged, #AccountNotLogged{
       
-      > .content{
-        width:      100%;
-      
-        input{
-          // disable yellow input background when autocompletion
-          &:-webkit-autofill {
-              -webkit-box-shadow: 0 0 0px 1000px $color_blue_dark inset;
-              -webkit-text-fill-color: $color_grey_light !important;
-          }
+      > .content{}
+
+      &#AccountNotLogged{
+        .content{
+          #Login{}
+          #ForgotPassword{}
+          #CreateAccount{}
         }
       }
 
-    }
-    
-    // Buttons toggling rolls    
-    .buttonLogin, .buttonLoginCancel, #buttonCreateAccount, #buttonForgotSubmit, #Logout, #buttonPasswordSubmit, .buttonPasswordCancel{
-      //transform-origin: left top;
-      //transform: scale(0.8);
-      //padding: 2em;
-      *{
-        font-size:12px !important;
+      &#AccountLogged{
+        .content{
+
+          div.flex{
+
+            p{
+              &:firs-of-type{
+                margin-top: 10px;
+              }
+              &#textUsername{
+                font-size: 22px;
+                color: $color_active;
+              }
+              &#textEmail{
+                font-size: 12px;
+                color: $color_grey_medium;
+                width: 10em;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+              }
+              &#textEmailStatut{
+                font-size: 10px;
+                color: $color_blue_medium1;
+              }
+            }
+
+            #ChangeAvatar{
+              margin-right: 1em;
+
+              .currentAvatar, .avatarPreview{
+                transition: all 0.5s;
+                display: inline-block;
+
+                img, .avatarDefault{
+                  width:      60px;
+                  height:     60px;
+                  max-width:  60px;
+                  max-height: 60px;
+                  min-width:  60px;
+                  min-height: 60px;
+                  border-radius: 100%;
+                }
+
+                &.currentAvatar{
+                  position: relative;
+                  //left:     28px;
+                  left:     0;
+                  opacity:  1;
+
+                  width:4.5em;
+
+                  &.is-visible{
+                    opacity:  0.7;
+                    left:     0px;
+                  }
+
+                  // If user didn't set is own avatar
+                  .avatarDefault{
+                  }
+
+                  #avatarOptions{
+                    position: absolute;
+                    top:      0;
+                    left:     3.8em;
+                    transform: scale(0);
+
+                    transition: all 0.5s;
+                    opacity:    0;
+                    pointer-events: none;
+
+
+                    #uploadButton{
+
+                    }
+                    #deleteButton{
+
+                    }
+
+                  }
+                  &:hover {
+                    width:6.25em;
+                    #avatarOptions{
+                      transform: scale(0.8);
+                      opacity: 1;
+                      pointer-events: auto;
+                    }
+                  }
+                }
+
+                &.avatarPreview{
+                  position: absolute;
+                  //left:     28px;
+                  left:44px;
+                  transform:  scale(1) translate3d(0, 0, 0);
+                  opacity:    0;
+                  pointer-events: none;
+
+                  &.is-visible{
+                    transform:  scale(1.2) translate3d(-20px, 15px, 0);
+                    opacity:    1;
+                    pointer-events: auto;
+                  }
+
+                }
+
+              }
+              #buttonUploadAvatar{
+                width: 0em; // trick
+                height: 0em;
+                transition: all 0.4s;
+                transform-origin: top;
+                transform:  scale(0);
+                opacity:    0;
+                &.is-visible{
+                  transform:  scale(1);
+                  opacity:    1;
+                  height:     4em;
+                }
+                *{ font-size: 10px !important; }
+              }
+            }
+
+          }
+
+          #Logout{
+            margin-top: 10px;
+          }
+
+          #ChangePassword{}
+
+        }
       }
+      
     }
-        
-    // Roll over
-  
+
+    
+    // Buttons margin
+    #Login, #ForgotPassword, #Logout{
+      margin-bottom: 10px;
+    }
+      
+    // RollOver animation
     #Login, #ForgotPassword, #ChangePassword, #CreateAccount{
-      //max-width: 30em !important;
       width: 100%;
-      margin-top: 10px;
       .roll{
         height:     auto;
         overflow:   hidden;
@@ -59,190 +215,9 @@
         }
       }
     }
-    
-    #Login{
-      // Todo : check in Login.jsx if needed
-      .loaderLinear{
-        position:   absolute !important; 
-        bottom:     0 !important;
-        max-width:  100% !important;
-        width:      100% !important;
-        opacity:    0.5;
-      }    
-      // Todo : check in Login.jsx if needed
-      .loaderBounce{
-        transform: scale(0.6);
-        position: absolute;
-        bottom:0;
-        right:0;
-      }  
-      
-      #ForgotPassword{
-//        .roll{
-//          height:     auto;
-//          overflow:   hidden;
-//          transition: all 0.6s ease;
-//          max-height: 0;
-//          &.is-visible{
-//            max-height: 400px;
-//          }
-//        }
-      }
-    }
-    
-    #CreateAccount{}
-    
-    #Profile{
-      padding: 1em;
-      div.content{
-        //background: red;
-        
-        div.flex{
-          //background: blue;
-          p{
-            &:firs-of-type{
-              margin-top: 10px;
-            }
-            &#textUsername{
-              font-size: 22px;
-              color: $color_active;
-            }
-            &#textEmail{
-              font-size: 12px;
-              color: $color_grey_medium;
-              width: 10em;
-              overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;
-            }
-            &#textEmailStatut{
-              font-size: 10px;
-              color: $color_blue_medium1;
-            }
-          }
-        }
-        
-        #ChangeAvatar{
-          margin-right: 1em;
-
-          .currentAvatar, .avatarPreview{
-            transition: all 0.5s;
-            display: inline-block;
-
-            img, .avatarDefault{
-              width:      60px;
-              height:     60px;
-              max-width:  60px;
-              max-height: 60px;
-              min-width:  60px;
-              min-height: 60px;
-              border-radius: 100%;
-            }
-
-            &.currentAvatar{
-              position: relative;
-              //left:     28px;
-              left:     0;
-              opacity:  1;
-
-              width:4.5em;
-              
-              &.is-visible{
-                opacity:  0.7;
-                left:     0px;
-              }
-              
-              // If user didn't set is own avatar
-              .avatarDefault{
-              }
-              
-              #avatarOptions{
-                position: absolute;
-                top:      0;
-                left:     3.8em;
-                transform: scale(0);
-                
-                transition: all 0.5s;
-                opacity:    0;
-                pointer-events: none;
-                
-
-                #uploadButton{
-                  
-                }
-                #deleteButton{
-                  
-                }
-                
-              }
-              &:hover {
-                width:6.25em;
-                #avatarOptions{
-                  transform: scale(0.8);
-                  opacity: 1;
-                  pointer-events: auto;
-                }
-              }
-            }
-
-            &.avatarPreview{
-              position: absolute;
-              //left:     28px;
-              left:44px;
-              transform:  scale(1) translate3d(0, 0, 0);
-              opacity:    0;
-              pointer-events: none;
-
-              &.is-visible{
-                transform:  scale(1.2) translate3d(-20px, 15px, 0);
-                opacity:    1;
-                pointer-events: auto;
-              }
-
-            }
-            
-          }
-          #buttonUploadAvatar{
-            width: 0em; // trick
-            height: 0em;
-            transition: all 0.4s;
-            transform-origin: top;
-            transform:  scale(0);
-            opacity:    0;
-            &.is-visible{
-              transform:  scale(1);
-              opacity:    1;
-              height:     4em;
-            }
-            *{ font-size: 10px !important; }
-          }
-        }
-        
-        #Logout{
-          margin-top: 10px;
-        }
-        
-        #Logout, #buttonPasswordSubmit, .buttonPasswordCancel{}
-        
-        #ChangePassword{
-          //max-width: 30em !important;
-          width: 100%;
-          .roll{
-            height:     auto;
-            overflow:   hidden;
-            transition: all 0.6s ease;
-            max-height: 0;
-            &.is-visible{
-              max-height: 400px;
-            }
-          }
-        }
-        
-      }
-    }
-    
-        
+ 
   }  
+  
 }
 
 
