--- a/client/scss/account/Account.css
+++ b/client/scss/account/Account.css
@@ -11,35 +11,51 @@
   .account-box input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px #131d2a inset;
     -webkit-text-fill-color: #ebebeb !important; }
-  /* line 25, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+  /* line 24, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+  .account-box .inputFloatingLabel * {
+    font-size: 14px !important; }
+  /* line 31, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
   .account-box .btn-cancel * {
     font-size: 10px !important; }
-  /* line 30, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+  /* line 36, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
   .account-box .btn-action * {
     font-size: 10px !important; }
 
-/* line 37, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+/* line 45, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+#Login, #ForgotPassword, #ChangePassword, #CreateAccount, #ResetForgotPassword {
+  width: 100%; }
+  /* line 47, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+  #Login .roll, #ForgotPassword .roll, #ChangePassword .roll, #CreateAccount .roll, #ResetForgotPassword .roll {
+    height: auto;
+    overflow: hidden;
+    transition: all 0.6s ease;
+    max-height: 0; }
+    /* line 52, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    #Login .roll.is-visible, #ForgotPassword .roll.is-visible, #ChangePassword .roll.is-visible, #CreateAccount .roll.is-visible, #ResetForgotPassword .roll.is-visible {
+      max-height: 400px; }
+
+/* line 58, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
 #ResetForgotPassword {
   margin: 3em auto 0 auto; }
 
-/* line 41, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+/* line 62, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
 #Account {
   margin-top: 1em; }
-  /* line 44, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+  /* line 65, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
   #Account section {
     display: flex;
     margin: 2em auto;
     justify-content: center;
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap; }
-    /* line 69, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 90, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #AccountLogged#AccountLogged .content div.flex p:firs-of-type, #Account section #AccountNotLogged#AccountLogged .content div.flex p:firs-of-type {
       margin-top: 10px; }
-    /* line 72, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 93, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #AccountLogged#AccountLogged .content div.flex p#textUsername, #Account section #AccountNotLogged#AccountLogged .content div.flex p#textUsername {
       font-size: 22px;
       color: #f26e63; }
-    /* line 76, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 97, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #AccountLogged#AccountLogged .content div.flex p#textEmail, #Account section #AccountNotLogged#AccountLogged .content div.flex p#textEmail {
       font-size: 12px;
       color: #b2b2b2;
@@ -47,18 +63,18 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap; }
-    /* line 84, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 105, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #AccountLogged#AccountLogged .content div.flex p#textEmailStatut, #Account section #AccountNotLogged#AccountLogged .content div.flex p#textEmailStatut {
       font-size: 10px;
       color: #466da0; }
-    /* line 90, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 111, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar {
       margin-right: 1em; }
-      /* line 93, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      /* line 114, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
       #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview {
         transition: all 0.5s;
         display: inline-block; }
-        /* line 97, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        /* line 118, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
         #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar img, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar .avatarDefault, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview img, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview .avatarDefault, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar img, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar .avatarDefault, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview img, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview .avatarDefault {
           width: 60px;
           height: 60px;
@@ -67,17 +83,17 @@
           min-width: 60px;
           min-height: 60px;
           border-radius: 100%; }
-        /* line 107, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        /* line 128, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
         #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar {
           position: relative;
           left: 0;
           opacity: 1;
           width: 4.5em; }
-          /* line 115, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          /* line 136, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
           #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar.is-visible, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar.is-visible {
             opacity: 0.7;
             left: 0px; }
-          /* line 124, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          /* line 145, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
           #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar #avatarOptions, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar #avatarOptions, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar #avatarOptions, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar #avatarOptions {
             position: absolute;
             top: 0;
@@ -86,27 +102,27 @@
             transition: all 0.5s;
             opacity: 0;
             pointer-events: none; }
-          /* line 143, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          /* line 164, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
           #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar:hover, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar:hover, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar:hover, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar:hover {
             width: 6.25em; }
-            /* line 145, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+            /* line 166, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
             #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar:hover #avatarOptions, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar:hover #avatarOptions, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.currentAvatar:hover #avatarOptions, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.currentAvatar:hover #avatarOptions {
               transform: scale(0.8);
               opacity: 1;
               pointer-events: auto; }
-        /* line 153, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        /* line 174, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
         #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.avatarPreview, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.avatarPreview, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.avatarPreview, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.avatarPreview {
           position: absolute;
           left: 44px;
           transform: scale(1) translate3d(0, 0, 0);
           opacity: 0;
           pointer-events: none; }
-          /* line 161, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+          /* line 182, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
           #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.avatarPreview.is-visible, #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.avatarPreview.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .currentAvatar.avatarPreview.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar .avatarPreview.avatarPreview.is-visible {
             transform: scale(1.2) translate3d(-20px, 15px, 0);
             opacity: 1;
             pointer-events: auto; }
-      /* line 170, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+      /* line 191, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
       #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar {
         width: 0em;
         height: 0em;
@@ -114,31 +130,19 @@
         transform-origin: top;
         transform: scale(0);
         opacity: 0; }
-        /* line 177, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        /* line 198, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
         #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar.is-visible, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar.is-visible {
           transform: scale(1);
           opacity: 1;
           height: 4em; }
-        /* line 182, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+        /* line 203, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
         #Account section #AccountLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar *, #Account section #AccountNotLogged#AccountLogged .content div.flex #ChangeAvatar #buttonUploadAvatar * {
           font-size: 10px !important; }
-    /* line 188, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 209, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #AccountLogged#AccountLogged .content #Logout, #Account section #AccountNotLogged#AccountLogged .content #Logout {
       margin-top: 10px; }
-    /* line 201, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
+    /* line 222, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
     #Account section #Login, #Account section #ForgotPassword, #Account section #Logout {
       margin-bottom: 10px; }
-    /* line 206, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-    #Account section #Login, #Account section #ForgotPassword, #Account section #ChangePassword, #Account section #CreateAccount {
-      width: 100%; }
-      /* line 208, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-      #Account section #Login .roll, #Account section #ForgotPassword .roll, #Account section #ChangePassword .roll, #Account section #CreateAccount .roll {
-        height: auto;
-        overflow: hidden;
-        transition: all 0.6s ease;
-        max-height: 0; }
-        /* line 213, /Users/maxblue/Documents/Dev/GitHub/template-meteor-react/client/scss/account/Account.scss */
-        #Account section #Login .roll.is-visible, #Account section #ForgotPassword .roll.is-visible, #Account section #ChangePassword .roll.is-visible, #Account section #CreateAccount .roll.is-visible {
-          max-height: 400px; }
 
 /*# sourceMappingURL=Account.css.map */
